src/token_tree/snapshots/ling__token_stream__tests__token_tree_2.snap
---
source: src/token_stream/mod.rs
expression: "get_stream(\"(((\")"
---
(TokenStream([
  Group(
    bracket_kind: Round,
    tokens: TokenStream([
      Group(
        bracket_kind: Round,
        tokens: TokenStream([
          Group(
            bracket_kind: Round,
            tokens: TokenStream([]),
            span: Span(
              start: 2,
              end: 3,
            ),
          ),
        ]),
        span: Span(
          start: 1,
          end: 3,
        ),
      ),
    ]),
    span: Span(
      start: 0,
      end: 3,
    ),
  ),
]), [
  Token(
    span: Span(
      start: 2,
      end: 3,
    ),
    kind: Bracket(Opening(Round)),
  ),
  Token(
    span: Span(
      start: 1,
      end: 2,
    ),
    kind: Bracket(Opening(Round)),
  ),
  Token(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Bracket(Opening(Round)),
  ),
])
